# scarlet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  runs_v3.csv  workflow_context.nxs
bugs/: marion.txt
docs/: ebauche.txt  format.md
examples/: example_stiching_covariance.py  stiching_notebbok.ipynb  stitching_bis.ipynb  stitching_test.ipynb  test_stiching_AC.py
examples/data_SANS_LLB/: ludox_AM20_config_config_10_detector0.txt  ludox_AM20_config_config_9_detector0.txt  ludox_SM30_config_config_10_detector0.txt  ludox_SM30_config_config_10_detector1.txt  ludox_SM30_config_config_10_detector2.txt  (+9 more)
notebooks/: reduce_data_to_nxsas_raw.ipynb  runs_filtered.csv  runs_table.csv  stiching_notebbok.ipynb  tutorial copy.ipynb  tutorial.ipynb  tutorial_context_v3_initialization.ipynb  workflow.nxs  workflow_context_from_raw.ipynb
src/: __init__.py
src/scarlet/: cli.py  (+1 more)
tests/: test_azimuthal_average.py  test_cli.py  test_configuration_from_nexus.py  test_context.py  test_converter_dispatch.py  test_correction.py  test_edf.py  test_end_to_end_references.py  test_geometry.py  test_gui_mask_editor.py  test_gui_nxsas_viewer.py  test_gui_scarlet_viewer.py  test_integration.py  test_nexus_reader.py  test_pipeline.py  test_pipeline_azimuthal_step.py  test_reduction_2d.py  test_reduction_utils.py  test_refs_sub_schema_conditional_rules.py  test_resolution.py  test_sam_converter_schema.py  test_sansllb_converter_schema.py  test_stiching_nexus.py  test_stitching_imports.py  test_stitching_overlap.py  test_subtraction.py  test_transmission.py  test_workflow_configuration.py  test_workflow_configuration_compare_wavelength.py  test_workflow_context_persistence.py  test_workflow_context_schema.py  test_workflow_normalization.py  test_workflow_pipeline.py  test_xlsx.py
(+57 files in other folders)
