[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarlet"
version = "0.1.0"
description = "NeXus-native, instrument-agnostic framework for SANS data reduction."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "SCARLET Contributors" }]
dependencies = ["PyYAML>=6.0", "h5py>=3.10", "numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8"]
notebook = ["jupyterlab>=4"]
viewer = ["silx>=2.0", "PySide6>=6.7"]

[project.scripts]
scarlet = "scarlet.cli:main"
viewer = "scarlet.gui.scarlet_viewer:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["scarlet*"]

[tool.setuptools.package-data]
"scarlet.schemas" = ["*.yaml", "*.yml", "README.md"]
