[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarlet"
version = "0.1.0"
description = "NeXus-native, instrument-agnostic framework for SANS data reduction."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "SCARLET Contributors" }]
dependencies = [
    "PySide6>=6.7",
    "PyYAML>=6.0",
    "h5py>=3.10",
    "jupyterlab>=4",
    "numpy>=1.26",
    "scipy>=1.12",
    "scipp>=25.0",
    "silx>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
scarlet = "scarlet.cli:main"
viewer = "scarlet.gui.scarlet_viewer:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["scarlet*"]

[tool.setuptools.package-data]
"scarlet.schemas" = ["*.yaml", "*.yml", "README.md"]
